--- a/src/locales/lang/ar.json
+++ b/src/locales/lang/ar.json
@@ -19,6 +19,11 @@
             "customerDetails": "تفاصيل المستخدم",
             "mail": "بريد"
         },
+        "appsBook": {
+            "book": "الحجوزات",
+            "bookings": "قائمة الحجوزات"
+
+        },
         "appsSales": {
             "sales": "الاحصائيات",
             "dashboard": "لوحة القيادة",
